Scrollbar fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@
   }
 
   .filters {
-    padding: 24px 0;
+    padding: 32px 0;
 
     span {
       width: 112px;
